@@ -1,6 +1,7 @@
 0.6.2
   - Added full screen mode.
   - Added thumbnail episode view with no plot.
+  - Added movie cleart and landscape views.
   - Search for titles in relevent pages.
   - Replicate XBMC key functions. If you have the control window open (press the remote icon bottom right); home, left, backspace, x, c etc. act the same as in XBMC GUI.
   - Lyric support in full screen. Requires CU LRC Lyrics 1.0.2+. Thanks ronie.
